source/_assets/stylesheets/style.css
body {
	padding: 0 !important;
	font-size:18px;
	line-height:24px;
  background-color: rgb(247,247,247);
}

p {
	margin:12px 0;
}

article {
  max-width:725px;
}

table {
  background-color: white;
}

.content-wrapper {
  padding-left:40px;
  padding-right:40px;
}

b, strong {
  font-family: "Proxima N W15 Smbd";
}

.nopadding {
  padding:0px;
}

.rowpadding {
  padding:0 15px 0px 15px;
}

.bar-indicator { 
	width: 220px;
	height: 20px;
	background: url(/images/bar-indicator.gif);
}

.result a.title { text-decoration:underline; }
.result small { color:#093; }

.anchor { margin-left: -14px;
font-size: 14px;
color: black;
line-height: 26px;
}

.anchor-icon {
  display: inline-block;
  width:14px;
}

.anchor-icon i {
  left: -3px;
  position: relative;
}

.icon-link { display:none; }

.anchor-wrap:hover .anchor-icon i {
	display: inline-block;
}

#logo {
	margin-top:18px;
	display:inline-block;
	width:120px;
	height:33px;
	background: url(/images/sendgrid-logo.png?embed=true);
}

#content img {
	border-bottom: 1px solid #ddd;
	border-top: 1px solid #ddd;
	padding-top:12px;
	padding-bottom:12px;
}

li { line-height:24px; }

hr.docs-separator {
	margin: 40px 0 39px;
}

.callout-info {
  background-color: #f0f7fd;
  border-color: #d0e3f0;
}

.callout-warning {
background-color: #fcf2f2;
border-color: #dFb5b4;
}

.callout {
  margin: 20px 0;
  padding: 15px 30px 15px 15px;
  border-left: 5px solid #eee;
}

.callout-github {
  padding-right: 80px;
  background: #f0f7fd url(../images/GitHub-Mark-64px.png?embed=true) 98% no-repeat no-repeat;
  margin-bottom: 20%;
}

.callout-github .link {
	margin: 25px 0 0 0;
	font-weight: bold;
}

.code-buttons {
  margin: 0 40px;
}

.code-buttons > .nav-tabs { border-bottom: 0px }

.code-buttons > .nav-tabs > li > .code-button {
  padding-top:5px;
  padding-bottom:2px;
  border:1px solid #EEE;
  background-color:white;
  font-size:12px;
  color: rgb(0,112,205);

}

.code-buttons > .nav-tabs > li .code-button:hover, .code-buttons > .nav-tabs > li .code-button.hover { 
  cursor: pointer;
  background-color: #eee;
}

figure.code {
	margin: 0 40px 1.5em;
}

#copy-prompt {
	position: absolute;
	color: #fff;
	background-color: rgba(0,0,0,.6);
	font-size: 20px;
	border-radius: 10px;
	padding: 15px;
	margin-top: 20px;
}

code.wrap, code.requestdata { 
 white-space: pre-wrap;       /* css-3 */
 white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
 white-space: -pre-wrap;      /* Opera 4-6 */
 white-space: -o-pre-wrap;    /* Opera 7 */
 word-wrap: break-word;       /* Internet Explorer 5.5+ */
 display:inline-block;
 max-width:580px;
}

.request-block {
	margin: 10px 0;
}

.request-block code {
  display: inline-block;
  white-space: normal;
  word-break: break-word;
}

.request-block .requestdata {
	color: black;
}

.request-block .requestdata .data-key {
	color: #2aa198;
}

.request-block .requestdata .data-value {
	color: #859900;
}

body.logged-out .logged-in, body.logged-in .logged-out { 
	display: none;
}

body.logged-out .logged-out, body.logged-in .logged-in { 
	display: block;
}

body.logged-out .logged-out, body.logged-in .logged-in .btn { 
	display: inline-block;
}

.tab-content {
	padding: 10px;
	border: 1px solid #DDD;
	margin-bottom: 10px;
  border-top:0px;
  background-color:white;
}

article .nav-tabs li a {
  border-bottom:0px;
  color: #555;
}

#header-top { 
  height: 28px; 
  border-bottom: 1px solid #000;
  background-color: rgb(30,36,47);
  padding-right:30px;
}

#header-top a {
  color: white;
}

#header-top small {
  font-family: "Proxima N W15 Light";
  font-size:12px;
}

#nav { 
  min-height: 68px; 
  background-color: rgb(47,54,70); 
  border-bottom: 4px solid #287abe; 
  margin-bottom: 0; 
}

#nav ul { list-style-type: none; }
#nav .nav-link { height: 68px;}
#nav .nav-link a { 
  padding: 29px 10px 25px 10px; 
  line-height: 14px; 
  color: #fff; 
  text-transform: uppercase; 
  font-size: 13px; 
}

#nav .nav-link a:hover { text-decoration: underline; background-color: rgb(47,54,70); }
#nav .nav > li > a { text-shadow: none; }
#nav .btn-navbar { color: #000; padding: 1px 10px; }

#nav .navbar { border-radius:0; }

#nav .btn {
  border-radius:15px;
  width: 100px;
  border:0px;
  margin-top:17px;
  margin-right:7px;
}

.collapsed-icon { color:white; font-size:36px; }

.navbar-buttons { margin-right:30px }

.nav-list [class^="icon-"] {
  margin-right: 9px;
  margin-top: 2px;
}

.home-list a:hover {
  text-decoration:none;
}

.panel [class^="icon-"] {
  font-size:36px;
}

.panel-highlight {
  color: rgb(127, 228, 228);
}

.panel {
  text-align:center;
  padding-top:50px;
  height:190px;
  vertical-align:middle;
  font-family: "Proxima N W15 Light";
  overflow: hidden;
}

.panel:hover a {
  color:white;
  padding: 15px;
  margin: -15px;
  display: block;
  height: 210px;
}

.panel h3 {
  color: rgb(0,112,205)
}

.panel:hover p {
  display:block;
}

.panel p {
  display:none;
}

.panel:hover [class^="icon-"] {
  display:none;
}

.panel:hover h3 {
  color:white;
  margin:0px;
}

.panel:hover {
  text-align:left;
  padding:15px;
  color:white;
  background-color: rgb(0,112,205);
  font-size: 14px;
  text-decoration:none;
}

.sidebar-nav .nav-header { font-size:15px}

#logo a
{
	float: left;
	margin-top: -8px;
	position: relative;
}

/* Responsive menu stuff */
#header-wrap .navbar-inner { 
	min-height:0;
	background: none;
	border: 0;
	box-shadow: 0 0 0;
	padding:0;
}

#header { width: 100%; }


#header-wrap .btn-navbar { 
	float:none;
	margin-top:13px;
}

.navbar-search {
  background-color: rgb(30,36,47);
  padding:30px 16px;
  float:none;
}

.search-query { 
	background-color: white; 
}

.navbar-search  input { border-radius:0px; }
.navbar-search  .btn { border-radius:0px; }

#footer-iframe {
  width: 100%;
  height: 248px;
  border: 0;
  margin-bottom: -8px;
}

#content {
  padding-bottom: 20px;
  overflow: auto;
}

  /*Opera Fix*/
body:before {
	content:"";
	height:100%;
	float:left;
	width:0;
	margin-top:-32767px;/
}

.callout > a { color: rgb(240, 132, 2); }
.callout > h2 { font-size: 18px; }

.label, .badge { font-size: 15px; }

.subtree-name:hover{ background-color: transparent; text-decoration: underline; }
.nav>li>a:hover  { background-color: transparent; text-decoration: underline; }

#nav-menu li.collapsibleListOpen{
  background:rgb(53,61,78) url('/images/minus.png?embed=true') no-repeat 16px 16px;
	cursor: pointer;
}

#nav-menu li.collapsibleListClosed{
  background: rgb(47, 54, 70) url('/images/plus.png?embed=true') no-repeat 16px 16px;
	cursor: pointer;
}

#nav-menu li {
  border-top:1px solid rgb(27,28,30);
  background-color: rgb(30,36,47);
}

#nav-menu li.active {
  background-color: rgb(0,112,205);
  margin-left: -40px;
  padding-left: 40px;
}

#nav-menu li ul li.active {
  margin-left: -80px;
  padding-left: 80px;
}

#nav-menu li ul li ul li.active {
  margin-left: -120px;
  padding-left: 120px;
}

#nav-menu li ul li ul li ul li.active {
  margin-left: -160px;
  padding-left: 160px;
}

.subtree-name {
  padding:12px 38px;
  color: #eee;
  font-family: "Proxima N W15 Light", Helvetica, Arial, sans-serif;
}

#nav-menu .subtree-name+ul li {
  border:0px;
}

.subtree-name+ul {
  padding-left:40px;
  background-color: rgb(30,36,47);
}


#nav-menu .subtree-name+ul li.collapsibleListClosed {
  background-color: rgb(30,36,47);
}

#nav-menu .subtree-name+ul li.collapsibleListOpen {
  background-color: rgb(30,36,47);
}

.parent .subtree-name {
  padding-left:40px;
}

.nav>li>a {
  font-family: "Proxima N W15 Light", Helvetica, Arial, sans-serif;
  padding:12px 15px;
  color: #eee;
  font-size: 12pt;
}

.breadcrumb-pane { 
  font-size: 13px;
}

.breadcrumb {
  float: left;
  padding: 20px 0px 0px 0px;
  margin: 0 0 10px;
}

.breadcrumb-pane .edit-link {
  margin-top: 21px;
  float: right;
}

.page-header {
  margin: 0 0 30px 0;
  padding-bottom: 25px;
  border-bottom: 1px solid #ddd;
}

li.official {
	list-style-type: none;
	background: url(/images/favicon.ico) left center no-repeat;
	padding: 0 24px;
	margin-left: -20px;
}

#overlay {
    position: fixed;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    overflow: auto;
    background-color: rgba(0,0,0,.7);
    z-index: 10000;
}

#overlay .code-buttons {
	margin-top: 20px;
}

pre code {
  white-space: pre;
}

figure.code.expanded {
 position: fixed;
 top:0;
 left:0;
 padding:60px 40px 40px 40px;
 margin: 0;
 z-index:100000;
}

.video-container {
	position: relative;
	padding-bottom: 56.25%;
	padding-top: 30px;
	height: 0;
	overflow: hidden;
}

.video-container iframe,  
.video-container object,  
.video-container embed {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
}

#sidebar-header {
  background-color: rgb(30, 36, 47);
  color: white;
  padding: 0px 18px;
}

#sidebar-header h3 {
  display: inline-block;
  margin-top: 20px;
}

#sidebar {
  border-top: 1px solid black;
  max-height: none;
}

@media (max-width: 767px) {
  .nav-link { text-align:center; }
  #nav { border-bottom: 0px; }
  #nav .navbar-header { border-bottom: 4px solid rgb(0,112,205); }
  #navbar { background-color: rgb(30,36,47); }
  #nav .nav-link a {
    padding: 12px 15px;
    font-size: 16px;
    height: 44px;
    line-height: 20px;
  }

  #nav .nav-link {
    height:auto;
  }
  
  #nav .btn {
    width: 80%;
    margin: 20px auto;
  }
}

@media (min-width: 992px) {
  .container {
    width: 970px;
  }

}

